[dependencies]
num-complex = '0.3.0'
num-integer = '0.1.43'
num-traits = '0.2.12'

[dependencies.approx]
optional = true
version = '0.3.2'

[dependencies.blas-src]
default-features = false
optional = true
version = '0.6.1'

[dependencies.cblas-sys]
default-features = false
optional = true
version = '0.1.4'

[dependencies.matrixmultiply]
version = '0.2.3'

[dependencies.rawpointer]
version = '0.2.1'

[dependencies.rayon]
optional = true
version = '1.4.1'

[dependencies.serde]
optional = true
version = '1.0.116'

[dev-dependencies]
approx = '0.3.2'
defmac = '0.2'

[dev-dependencies.itertools]
default-features = false
features = ['use_std']
version = '0.8.0'

[dev-dependencies.quickcheck]
default-features = false
version = '0.9'

[features]
blas = [
    'cblas-sys',
    'blas-src',
]
docs = [
    'approx',
    'serde',
    'rayon',
]
serde-1 = ['serde']
test = ['test-blas-openblas-sys']
test-blas-openblas-sys = ['blas']

[lib]
bench = false
name = 'ndarray'
test = true

[package]
authors = [
    'bluss',
    'Jim Turner',
]
build = 'build.rs'
categories = [
    'data-structures',
    'science',
]
description = 'An n-dimensional array for general elements and for numerics. Lightweight array views and slicing; views support chunking and splitting.'
documentation = 'https://docs.rs/ndarray/'
edition = '2018'
exclude = ['docgen/images/*']
keywords = [
    'array',
    'data-structure',
    'multidimensional',
    'matrix',
    'blas',
]
license = 'MIT/Apache-2.0'
name = 'ndarray'
readme = 'README-crates.io.md'
repository = 'https://github.com/rust-ndarray/ndarray'
version = '0.13.1'
[package.metadata.docs.rs]
features = ['docs']

[package.metadata.release]
no-dev-version = true
tag-name = '{{version}}'
[profile.bench]
debug = true

[profile.release]

[workspace]
exclude = ['numeric-tests']
members = [
    'ndarray-rand',
    'serialization-tests',
    'blas-tests',
]
